We using LazyGit

--- a/private_Library/private_Application Support/Code/User/settings.json
+++ b/private_Library/private_Application Support/Code/User/settings.json
@@ -375,5 +375,6 @@
     "selectionRanges": true,
     "semanticHighlighting": true,
     "completion": true
-  }
+  },
+  "security.workspace.trust.untrustedFiles": "open"
 }
