--- a/private_Library/private_Application Support/Code/User/settings.json
+++ b/private_Library/private_Application Support/Code/User/settings.json
@@ -376,5 +376,16 @@
     "semanticHighlighting": true,
     "completion": true
   },
-  "security.workspace.trust.untrustedFiles": "open"
+   "security.workspace.trust.untrustedFiles": "open",
+  "cSpell.language": "en-GB",
+  "cSpell.enabledFileTypes": {
+    "*": false
+  },
+  "cSpell.userWords": [
+    "rubocop",
+    "Sidekiq"
+  ],
+  "github.copilot.enable": {
+    "*": false
+  },
 }
